[package]
name = "json-streaming"
version = "0.1.0"
edition = "2024"

[features]
default = ["blocking", "non-blocking"]
blocking = []
non-blocking = ["std"]
std = []
tokio = ["non-blocking", "std"]

[dev-dependencies]
rstest = "0.26"
tokio = { version = "1.47", default-features = false, features = ["macros", "rt-multi-thread", "rt"] }

[dependencies]
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["io-util"] }

[[example]]
name = "non-blocking"
path = "examples/non_blocking.rs"
required-features = ["tokio"]
